--- a/src/Presentation/AspNetMvcActiveDirectoryOwin.Web/AspNetMvcActiveDirectoryOwin.Web.csproj
+++ b/src/Presentation/AspNetMvcActiveDirectoryOwin.Web/AspNetMvcActiveDirectoryOwin.Web.csproj
@@ -159,6 +159,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
