--- a/src/Presentation/AspNetMvcActiveDirectoryOwin.Web/Web.config
+++ b/src/Presentation/AspNetMvcActiveDirectoryOwin.Web/Web.config
@@ -8,7 +8,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="false" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <runtime>
